# midi-app-controller

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  codecov.yml  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements-test.txt  setup.cfg
.github/workflows/: build.yml  publish.yml  test.yml
config_files/binds/: sample_binds.yaml  x_touch_mini_binds.yaml  x_touch_mini_test.yaml
config_files/controllers/: sample_controller.yaml  x_touch_mini.yaml  x_touch_mini_example.yaml
docs/: api_reference.md  binds.md  config_files.md  controllers.md  index.md  macros.py
midi_app_controller/: config.py  example.py  gui.py  napari.yaml  utils.py
midi_app_controller/_tests/: test_config.py  test_utils.py
midi_app_controller/_trash/: example.py  midi_example.py  midi_napari_example.py
midi_app_controller/actions/: actions_handler.py  bound_controller.py  connected_controller.py  napari_actions.py
midi_app_controller/actions/_tests/: test_actions_handler.py  test_bound_controller.py  test_connected_controller.py  test_napari_actions.py
midi_app_controller/config_files/binds/: x_touch_mini_binds.yaml
midi_app_controller/controller/: connected_controller.py  controller_constants.py  ex1.py
midi_app_controller/controller/_tests/: test_connected_controller.py
midi_app_controller/gui/: binds_editor.py  gui_main.py  gui_template.py  midi_status.py  sample_binds.yaml  sample_controller.yaml  utils.py
midi_app_controller/gui/_tests/: test_binds_editor.py  test_midi_status.py
midi_app_controller/midi/: midi_example.py
midi_app_controller/models/: app_state.py  binds.py  controller.py  utils.py
midi_app_controller/models/_tests/: test_binds.py  test_controller.py  test_utils.py
midi_app_controller/state/: state_manager.py
midi_app_controller/state/_tests/: test_state_manager.py
