[build-system]
# setuptools_scm to make all files commited in Git also part of the package
requires = ["setuptools>=69.4.2", "setuptools_scm>=8", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "midi-app-controller"
description = "Control napari with a MIDI controller."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Framework :: napari",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]
dependencies = [
    "napari>=0.4.19",
    "python-rtmidi>=1.5.8",
    "pyyaml>=6.0.1",
    "pydantic>=2.7.1",
    "appdirs>=1.4.4",
    "qtpy>=2.4.1",
    "superqt>=0.6.5",
]

[project.urls]
"Source Code" = "https://github.com/midi-app-controller/midi-app-controller"
Documentation = "https://midi-app-controller.readthedocs.io"

[project.entry-points."napari.manifest"]
midi-app-controller = "midi_app_controller:napari.yaml"

[project.optional-dependencies]
testing = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.0.2",
    "napari[all]",  # ensures Qt backend available for testing
    "flexparser!=0.4.0"  # see https://napari.zulipchat.com/#narrow/channel/212875-general/topic/broken.20pint.2Fflexparser/near/481110284
]
dev = [
    "midi-app-controller[testing]",
    "pre-commit>=3.7.0",
]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools_scm]
write_to = "midi_app_controller/_version.py"

[tool.ruff.lint]
select = [
    "E", "W", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "C4", # flake8-comprehensions
]
