[metadata]
name = midi-app-controller
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    napari[all]>=0.4.18
    python-rtmidi>=1.5.8
    pyyaml>=6.0.1
    pydantic>=1.10.13,<2

[options.entry_points]
napari.manifest =
    midi-app-controller = midi_app_controller:napari.yaml
