[metadata]
name = midi-app-controller
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    napari[all]>=0.4.18
    python-rtmidi>=1.5.8
    pyyaml>=6.0.1
    pydantic>=2.7.1
    appdirs>=1.4.4

[options.entry_points]
napari.manifest =
    midi-app-controller = midi_app_controller:napari.yaml
